--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta property="og:description" content="SALURBAL city, sub-city, and neighborhood definition and selection" />
 	<meta name="description" content="SALURBAL city, sub-city, and neighborhood definition and selection" />
 
-	<title>What is a SALURBAL City?</title>
+	<title>Bringing urban health to the table at COP30: A guide for public health researchers and practitioners</title>
 	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-EY6P51RXFQ"></script>
 	<script>
