--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
 	<meta property="og:description" content="SALURBAL city, sub-city, and neighborhood definition and selection" />
 	<meta name="description" content="SALURBAL city, sub-city, and neighborhood definition and selection" />
 
-	<title>Bringing urban health to the table at COP30: A guide for public health researchers and practitioners</title>
-	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-EY6P51RXFQ"></script>
+	<title>Bringing urban health to the table at COP30: A guide for public health researchers and practitioners</title>	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-08KYJ7YPJN"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
 		gtag('js', new Date());
 
-		gtag('config', 'G-EY6P51RXFQ');
+		gtag('config', 'G-08KYJ7YPJN');
 	</script>
 	<link rel='icon' type='image/x-icon' href='./favicon.ico' />
 	<link rel='stylesheet' href='./global.css' />
