initial pass at metadata for SEO #11

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-	<meta charset='utf-8' />
+<head>	<meta charset='utf-8' />
 	<meta name='viewport' content='width=device-width,initial-scale=1' />
-	<meta property="og:title" content="What is a SALURBAL city?" />
+	
+	<!-- Primary Meta Tags -->
+	<title>Bringing Urban Health to the Table at COP30: A Guide for Public Health Researchers and Practitioners</title>
+	<meta name="title" content="Bringing Urban Health to the Table at COP30: A Guide for Public Health Researchers and Practitioners" />
+	<meta name="description" content="A comprehensive guide for public health researchers and practitioners preparing for COP30 in Brazil, November 2025. Learn how COPs work, the role of health research in climate action, and how to translate health evidence to drive climate policy." />
+	<meta name="keywords" content="COP30, climate change, urban health, public health, Brazil 2025, UNFCCC, health pavilion, climate policy, SALURBAL" />
+	<meta name="author" content="Climate Change and Urban Health Research Center" />
+	<meta name="robots" content="index, follow" />
+	
+	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="https://bothness.github.io/scroll-engine/" />
-	<meta property="og:description" content="SALURBAL city, sub-city, and neighborhood definition and selection" />
-	<meta name="description" content="SALURBAL city, sub-city, and neighborhood definition and selection" />
-
-	<title>Bringing urban health to the table at COP30: A guide for public health researchers and practitioners</title>	<!-- Google tag (gtag.js) -->
+	<meta property="og:url" content="https://data.lacurbanhealth.org/" />
+	<meta property="og:title" content="Bringing Urban Health to the Table at COP30: A Guide for Public Health Researchers and Practitioners" />
+	<meta property="og:description" content="A comprehensive guide for public health researchers and practitioners preparing for COP30 in Brazil, November 2025. Learn how COPs work, the role of health research in climate action, and how to translate health evidence to drive climate policy." />
+	<meta property="og:image" content="https://salurbal-climate.github.io/cop_2025_scrolly/img/cop30/EN_Logo_SALURBAL-Climate_png.png" />
+	<meta property="og:site_name" content="SALURBAL Climate" />
+	<meta property="og:locale" content="en_US" />
+	
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image" />
+	<meta property="twitter:title" content="Bringing Urban Health to the Table at COP30: A Guide for Public Health Researchers and Practitioners" />
+	<meta property="twitter:description" content="A comprehensive guide for public health researchers and practitioners preparing for COP30 in Brazil, November 2025. Learn how COPs work, the role of health research in climate action, and how to translate health evidence to drive climate policy." />
+	<meta property="twitter:image" content="https://salurbal-climate.github.io/cop_2025_scrolly/img/cop30/EN_Logo_SALURBAL-Climate_png.png" />
+	<meta property="twitter:site" content="@lacurbanhealth" />
+	<meta property="twitter:creator" content="@lacurbanhealth" />
+	
+	<!-- Additional Meta Tags -->
+	<meta name="theme-color" content="#2563eb" />
+	<meta name="geo.region" content="Global" />
+	<meta name="geo.placename" content="Brazil" />
+	<meta name="DC.title" content="Bringing Urban Health to the Table at COP30: A Guide for Public Health Researchers and Practitioners" />
+	<meta name="DC.creator" content="Climate Change and Urban Health Research Center" />
+	<meta name="DC.subject" content="Climate Change, Urban Health, COP30, Public Health Policy" />
+	<meta name="DC.description" content="A comprehensive guide for public health researchers and practitioners preparing for COP30 in Brazil, November 2025." />
+	<meta name="DC.publisher" content="SALURBAL Climate" />
+	<meta name="DC.contributor" content="Kay Tookey, Elizabeth Cardona, Carolina Rendon, Mariana Lazo, Nelson Gouveia, Waleska Caiaffa, Ana Roux" />
+	<meta name="DC.date" content="2025-05" />
+	<meta name="DC.type" content="Interactive Guide" />
+	<meta name="DC.language" content="en" />
+	
+	<!-- Schema.org structured data -->
+	<script type="application/ld+json">
+	{
+		"@context": "https://schema.org",
+		"@type": "Guide",
+		"name": "Bringing Urban Health to the Table at COP30: A Guide for Public Health Researchers and Practitioners",
+		"description": "A comprehensive guide for public health researchers and practitioners preparing for COP30 in Brazil, November 2025.",
+		"url": "https://data.lacurbanhealth.org/",
+		"image": "https://salurbal-climate.github.io/cop_2025_scrolly/img/cop30/EN_Logo_SALURBAL-Climate_png.png",
+		"author": {
+			"@type": "Organization",
+			"name": "Climate Change and Urban Health Research Center",
+			"url": "https://drexel.edu/uhc/"
+		},
+		"publisher": {
+			"@type": "Organization",
+			"name": "SALURBAL Climate",
+			"logo": {
+				"@type": "ImageObject",
+				"url": "https://data.lacurbanhealth.org/"
+			}
+		},
+		"datePublished": "2025-05",
+		"dateModified": "2025-06",
+		"about": [
+			{
+				"@type": "Event",
+				"name": "COP30",
+				"startDate": "2025-11-10",
+				"endDate": "2025-11-21",
+				"location": {
+					"@type": "Place",
+					"name": "Philadelphia",
+					"addressCountry": "USA"
+				}
+			}
+		],
+		"keywords": "COP30, climate change, urban health, public health, Brazil 2025, UNFCCC, health pavilion, climate policy",
+		"genre": ["Education", "Public Health", "Climate Policy"]
+	}
+	</script><!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-08KYJ7YPJN"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
