--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				}
 			}
 		],
-		"keywords": "COP30, climate change, urban health, public health, Brazil 2025, UNFCCC, health pavilion, climate policy",
+		"keywords": "COP30, climate change, urban health, public health, Brazil 2025, UNFCCC, health pavilion, climate policy, SALURBAL, SALURBAL-Climate",
 		"genre": ["Education", "Public Health", "Climate Policy"]
 	}
 	</script><!-- Google tag (gtag.js) -->
