--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Bringing Urban Health to the Table at COP30: A Guide for Public Health Researchers and Practitioners</title>
 	<meta name="title" content="Bringing Urban Health to the Table at COP30: A Guide for Public Health Researchers and Practitioners" />
 	<meta name="description" content="A comprehensive guide for public health researchers and practitioners preparing for COP30 in Brazil, November 2025. Learn how COPs work, the role of health research in climate action, and how to translate health evidence to drive climate policy." />
-	<meta name="keywords" content="COP30, climate change, urban health, public health, Brazil 2025, UNFCCC, health pavilion, climate policy, SALURBAL" />
+	<meta name="keywords" content="COP30, climate change, urban health, public health, Brazil 2025, UNFCCC, health pavilion, climate policy, SALURBAL, Latin America, urban environment, health equity, climate adaptation, environmental health, health systems, sustainable cities, health co-benefits, NDCs, health research, epidemiology, social determinants of health, air quality, heat islands, green spaces, active transport, cardiovascular health, respiratory health, mental health, infectious disease, health policy, climate resilience, urban planning, built environment" />
 	<meta name="author" content="Climate Change and Urban Health Research Center" />
 	<meta name="robots" content="index, follow" />
 	
@@ -35,7 +35,7 @@
 	<meta name="geo.placename" content="Brazil" />
 	<meta name="DC.title" content="Bringing Urban Health to the Table at COP30: A Guide for Public Health Researchers and Practitioners" />
 	<meta name="DC.creator" content="Climate Change and Urban Health Research Center" />
-	<meta name="DC.subject" content="Climate Change, Urban Health, COP30, Public Health Policy" />
+	<meta name="DC.subject" content="Climate Change, Urban Health, COP30, Public Health Policy, SALURBAL, Latin American Health, Environmental Health, Health Equity, Sustainable Cities" />
 	<meta name="DC.description" content="A comprehensive guide for public health researchers and practitioners preparing for COP30 in Brazil, November 2025." />
 	<meta name="DC.publisher" content="SALURBAL Climate" />
 	<meta name="DC.contributor" content="Kay Tookey, Elizabeth Cardona, Carolina Rendon, Mariana Lazo, Nelson Gouveia, Waleska Caiaffa, Ana Roux" />
@@ -80,7 +80,7 @@
 				}
 			}
 		],
-		"keywords": "COP30, climate change, urban health, public health, Brazil 2025, UNFCCC, health pavilion, climate policy, SALURBAL, SALURBAL-Climate",
+		"keywords": "COP30, climate change, urban health, public health, Brazil 2025, UNFCCC, health pavilion, climate policy, SALURBAL, SALURBAL-Climate, Latin America, urban environment, health equity, climate adaptation, environmental health, health systems, sustainable cities, health co-benefits, NDCs, health research, epidemiology, social determinants of health, air quality, heat islands, green spaces, active transport, cardiovascular health, respiratory health, mental health, infectious disease, health policy, climate resilience, urban planning, built environment",
 		"genre": ["Education", "Public Health", "Climate Policy"]
 	}
 	</script><!-- Google tag (gtag.js) -->
