--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 	
 	<!-- Primary Meta Tags -->
 	<title>Bringing Urban Health to the Table at COP30: A Guide for Public Health Researchers and Practitioners</title>
-	<meta name="title" content="Bringing Urban Health to the Table at COP30: A Guide for Public Health Researchers and Practitioners" />
-	<meta name="description" content="A comprehensive guide for public health researchers and practitioners preparing for COP30 in Brazil, November 2025. Learn how COPs work, the role of health research in climate action, and how to translate health evidence to drive climate policy." />
-	<meta name="keywords" content="COP30, climate change, urban health, public health, Brazil 2025, UNFCCC, health pavilion, climate policy, SALURBAL, Latin America, urban environment, health equity, climate adaptation, environmental health, health systems, sustainable cities, health co-benefits, NDCs, health research, epidemiology, social determinants of health, air quality, heat islands, green spaces, active transport, cardiovascular health, respiratory health, mental health, infectious disease, health policy, climate resilience, urban planning, built environment" />
-	<meta name="author" content="Climate Change and Urban Health Research Center" />
+	<meta name="title" content="Bringing Health to the Table at COP30: A Guide for Public Health Researchers and Practitioners" />
+	<meta name="description" content="A comprehensive guide for public health researchers and practitioners preparing for COP30 in Brazil, November 2025. Learn how COPs work, the role of health research in climate action, and how to engage in the UNFCCC process." />
+	<meta name="keywords" content="COP30, climate change, urban health, public health, Brazil 2025, UNFCCC, health pavilion, climate policy, SALURBAL, Latin America, urban environment, health equity, climate adaptation, environmental health, health systems, sustainable cities, health co-benefits, NDCs, health research, epidemiology, social determinants of health, air quality, heat islands, green spaces, active transport, cardiovascular health, respiratory health, mental health, infectious disease, health policy, climate resilience, urban planning, built environment, Belém Brazil, Paris Agreement, Kyoto Protocol, WHO, Global Climate and Health Alliance" />
+	<meta name="author" content="Climate Change and Urban Health Research Center, SALURBAL Climate" />
 	<meta name="robots" content="index, follow" />
 	
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://data.lacurbanhealth.org/" />
 	<meta property="og:title" content="Bringing Urban Health to the Table at COP30: A Guide for Public Health Researchers and Practitioners" />
-	<meta property="og:description" content="A comprehensive guide for public health researchers and practitioners preparing for COP30 in Brazil, November 2025. Learn how COPs work, the role of health research in climate action, and how to translate health evidence to drive climate policy." />
+	<meta property="og:description" content="A comprehensive guide for public health researchers and practitioners preparing for COP30 in Brazil, November 2025. Learn how COPs work, the role of health research in climate action, and how to engage in the UNFCCC process." />
 	<meta property="og:image" content="https://salurbal-climate.github.io/cop_2025_scrolly/img/cop30/EN_Logo_SALURBAL-Climate_png.png" />
 	<meta property="og:site_name" content="SALURBAL Climate" />
 	<meta property="og:locale" content="en_US" />
@@ -24,7 +24,7 @@
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image" />
 	<meta property="twitter:title" content="Bringing Urban Health to the Table at COP30: A Guide for Public Health Researchers and Practitioners" />
-	<meta property="twitter:description" content="A comprehensive guide for public health researchers and practitioners preparing for COP30 in Brazil, November 2025. Learn how COPs work, the role of health research in climate action, and how to translate health evidence to drive climate policy." />
+	<meta property="twitter:description" content="A comprehensive guide for public health researchers and practitioners preparing for COP30 in Brazil, November 2025. Learn how COPs work, the role of health research in climate action, and how to engage in the UNFCCC process." />
 	<meta property="twitter:image" content="https://salurbal-climate.github.io/cop_2025_scrolly/img/cop30/EN_Logo_SALURBAL-Climate_png.png" />
 	<meta property="twitter:site" content="@lacurbanhealth" />
 	<meta property="twitter:creator" content="@lacurbanhealth" />
@@ -35,11 +35,11 @@
 	<meta name="geo.placename" content="Brazil" />
 	<meta name="DC.title" content="Bringing Urban Health to the Table at COP30: A Guide for Public Health Researchers and Practitioners" />
 	<meta name="DC.creator" content="Climate Change and Urban Health Research Center" />
-	<meta name="DC.subject" content="Climate Change, Urban Health, COP30, Public Health Policy, SALURBAL, Latin American Health, Environmental Health, Health Equity, Sustainable Cities" />
-	<meta name="DC.description" content="A comprehensive guide for public health researchers and practitioners preparing for COP30 in Brazil, November 2025." />
+	<meta name="DC.subject" content="Climate Change, Urban Health, COP30, Public Health Policy, SALURBAL, Latin American Health, Environmental Health, Health Equity, Sustainable Cities, UNFCCC, Belém Brazil, Paris Agreement, WHO" />
+	<meta name="DC.description" content="A comprehensive guide for public health researchers and practitioners preparing for COP30 in Belém, Brazil, November 2025." />
 	<meta name="DC.publisher" content="SALURBAL Climate" />
-	<meta name="DC.contributor" content="Kay Tookey, Elizabeth Cardona, Carolina Rendon, Mariana Lazo, Nelson Gouveia, Waleska Caiaffa, Ana Roux" />
-	<meta name="DC.date" content="2025-05" />
+	<meta name="DC.contributor" content="Katy Indvik, Elizabeth Cardona, Carolina Rendón, Mariana Lazo, Nelson Gouveia, Waleska Caiaffa, Olga Lucia Sarmiento, Ana Diez Roux" />
+	<meta name="DC.date" content="2025-07" />
 	<meta name="DC.type" content="Interactive Guide" />
 	<meta name="DC.language" content="en" />
 	
@@ -49,7 +49,7 @@
 		"@context": "https://schema.org",
 		"@type": "Guide",
 		"name": "Bringing Urban Health to the Table at COP30: A Guide for Public Health Researchers and Practitioners",
-		"description": "A comprehensive guide for public health researchers and practitioners preparing for COP30 in Brazil, November 2025.",
+		"description": "A comprehensive guide for public health researchers and practitioners preparing for COP30 in Belém, Brazil, November 2025.",
 		"url": "https://data.lacurbanhealth.org/",
 		"image": "https://salurbal-climate.github.io/cop_2025_scrolly/img/cop30/EN_Logo_SALURBAL-Climate_png.png",
 		"author": {
@@ -65,8 +65,8 @@
 				"url": "https://data.lacurbanhealth.org/"
 			}
 		},
-		"datePublished": "2025-05",
-		"dateModified": "2025-06",
+		"datePublished": "2025-07",
+		"dateModified": "2025-07",
 		"about": [
 			{
 				"@type": "Event",
@@ -75,12 +75,12 @@
 				"endDate": "2025-11-21",
 				"location": {
 					"@type": "Place",
-					"name": "Philadelphia",
-					"addressCountry": "USA"
+					"name": "Belém",
+					"addressCountry": "Brazil"
 				}
 			}
 		],
-		"keywords": "COP30, climate change, urban health, public health, Brazil 2025, UNFCCC, health pavilion, climate policy, SALURBAL, SALURBAL-Climate, Latin America, urban environment, health equity, climate adaptation, environmental health, health systems, sustainable cities, health co-benefits, NDCs, health research, epidemiology, social determinants of health, air quality, heat islands, green spaces, active transport, cardiovascular health, respiratory health, mental health, infectious disease, health policy, climate resilience, urban planning, built environment",
+		"keywords": "COP30, climate change, urban health, public health, Brazil 2025, UNFCCC, health pavilion, climate policy, SALURBAL, SALURBAL-Climate, Latin America, urban environment, health equity, climate adaptation, environmental health, health systems, sustainable cities, health co-benefits, NDCs, health research, epidemiology, social determinants of health, air quality, heat islands, green spaces, active transport, cardiovascular health, respiratory health, mental health, infectious disease, health policy, climate resilience, urban planning, built environment, Belém Brazil, Paris Agreement, Kyoto Protocol, WHO, Global Climate and Health Alliance, municipal governments, green zone, blue zone, nationally determined contributions",
 		"genre": ["Education", "Public Health", "Climate Policy"]
 	}
 	</script><!-- Google tag (gtag.js) -->
