Tier 2 static site SEO optimozaitions #17

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 	<title>Health at COP30: Guide for Public Health Researchers | SALURBAL Climate</title>
 	<meta name="title" content="Health at COP30: Guide for Public Health Researchers | SALURBAL Climate" />
 	<meta name="description" content="Learn how public health researchers can engage with COP30 climate conference in Belém, Brazil (Nov 2025). Practical guide for climate-health policy integration from SALURBAL Climate." />
-	<meta name="keywords" content="COP30 health, public health researchers, climate health policy, Belém Brazil 2025, UNFCCC health engagement, SALURBAL Climate, urban health climate change, health co-benefits climate action" />
+	<meta name="keywords" content="COP30 health, public health researchers, climate health policy, Belém Brazil 2025, UNFCCC health engagement, SALURBAL, SALURBAL Climate, urban health climate change, health co-benefits climate action" />
 	<meta name="author" content="SALURBAL Climate, Urban Health Collaborative" />
 	<meta name="robots" content="index, follow" />
 	
@@ -97,7 +97,9 @@
 		"isAccessibleForFree": true,
 		"sameAs": "https://doi.org/10.5281/zenodo.16373280"
 	}
-	</script><!-- Google tag (gtag.js) -->
+	</script>
+	
+	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-08KYJ7YPJN"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
@@ -106,6 +108,28 @@
 
 		gtag('config', 'G-08KYJ7YPJN');
 	</script>
+	
+	<!-- PWA and Mobile Optimization -->
+	<link rel="manifest" href="./manifest.json" />
+	<meta name="mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="default" />
+	<meta name="apple-mobile-web-app-title" content="COP30 Health Guide" />
+	
+	<!-- Apple Touch Icons for iOS -->
+	<link rel="apple-touch-icon" href="./img/cop30/EN_Logo_SALURBAL-Climate_png.png" />
+	<link rel="apple-touch-icon" sizes="152x152" href="./img/cop30/EN_Logo_SALURBAL-Climate_png.png" />
+	<link rel="apple-touch-icon" sizes="180x180" href="./img/cop30/EN_Logo_SALURBAL-Climate_png.png" />
+	
+	<!-- Microsoft Tiles -->
+	<meta name="msapplication-TileImage" content="./img/cop30/EN_Logo_SALURBAL-Climate_png.png" />
+	<meta name="msapplication-TileColor" content="#2f7ed3" />
+	
+	<!-- Performance optimization -->
+	<link rel="preload" as="image" href="./img/cop30/hero_image.jpg" />
+	<link rel="preconnect" href="https://fonts.googleapis.com" />
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+	
 	<link rel='icon' type='image/x-icon' href='./favicon.ico' />
 	<link rel='stylesheet' href='./global.css' />
 	<link rel='stylesheet' href='./build/bundle.css' />
