--- a/index.html
+++ b/index.html
@@ -5,29 +5,42 @@
 	<meta name='viewport' content='width=device-width,initial-scale=1' />
 	
 	<!-- Primary Meta Tags -->
-	<title>Bringing Urban Health to the Table at COP30: A Guide for Public Health Researchers and Practitioners</title>
-	<meta name="title" content="Bringing Health to the Table at COP30: A Guide for Public Health Researchers and Practitioners" />
-	<meta name="description" content="A comprehensive guide for public health researchers and practitioners preparing for COP30 in Brazil, November 2025. Learn how COPs work, the role of health research in climate action, and how to engage in the UNFCCC process." />
-	<meta name="keywords" content="COP30, climate change, urban health, public health, Brazil 2025, UNFCCC, health pavilion, climate policy, SALURBAL, Latin America, urban environment, health equity, climate adaptation, environmental health, health systems, sustainable cities, health co-benefits, NDCs, health research, epidemiology, social determinants of health, air quality, heat islands, green spaces, active transport, cardiovascular health, respiratory health, mental health, infectious disease, health policy, climate resilience, urban planning, built environment, Belém Brazil, Paris Agreement, Kyoto Protocol, WHO, Global Climate and Health Alliance" />
-	<meta name="author" content="Climate Change and Urban Health Research Center, SALURBAL Climate" />
+	<title>Health at COP30: Guide for Public Health Researchers | SALURBAL Climate</title>
+	<meta name="title" content="Health at COP30: Guide for Public Health Researchers | SALURBAL Climate" />
+	<meta name="description" content="Learn how public health researchers can engage with COP30 climate conference in Belém, Brazil (Nov 2025). Practical guide for climate-health policy integration from SALURBAL Climate." />
+	<meta name="keywords" content="COP30 health, public health researchers, climate health policy, Belém Brazil 2025, UNFCCC health engagement, SALURBAL, SALURBAL Climate, urban health climate change, health co-benefits climate action" />
+	<meta name="author" content="SALURBAL Climate, Urban Health Collaborative" />
 	<meta name="robots" content="index, follow" />
 	
+	<!-- Canonical URL -->
+	<link rel="canonical" href="https://salurbal-climate.github.io/cop_2025_scrolly/" />
+	
+	<!-- Language alternatives -->
+	<link rel="alternate" hreflang="en" href="https://salurbal-climate.github.io/cop_2025_scrolly/?lang=en" />
+	<link rel="alternate" hreflang="es" href="https://salurbal-climate.github.io/cop_2025_scrolly/?lang=es" />
+	<link rel="alternate" hreflang="pt" href="https://salurbal-climate.github.io/cop_2025_scrolly/?lang=pt" />
+	<link rel="alternate" hreflang="x-default" href="https://salurbal-climate.github.io/cop_2025_scrolly/" />
+	
+	<!-- Zenodo DOI reference -->
+	<meta name="citation_doi" content="10.5281/zenodo.16373280" />
+	<link rel="alternate" type="application/pdf" href="https://doi.org/10.5281/zenodo.16373280" title="Static version on Zenodo" />
+	
 	<!-- Open Graph / Facebook -->
-	<meta property="og:type" content="website" />
-	<meta property="og:url" content="https://data.lacurbanhealth.org/" />
-	<meta property="og:title" content="Bringing Urban Health to the Table at COP30: A Guide for Public Health Researchers and Practitioners" />
-	<meta property="og:description" content="A comprehensive guide for public health researchers and practitioners preparing for COP30 in Brazil, November 2025. Learn how COPs work, the role of health research in climate action, and how to engage in the UNFCCC process." />
-	<meta property="og:image" content="https://salurbal-climate.github.io/cop_2025_scrolly/img/cop30/EN_Logo_SALURBAL-Climate_png.png" />
+	<meta property="og:type" content="article" />
+	<meta property="og:url" content="https://salurbal-climate.github.io/cop_2025_scrolly/" />
+	<meta property="og:title" content="Health at COP30: Essential Guide for Public Health Researchers" />
+	<meta property="og:description" content="Learn how to engage with COP30 climate conference in Brazil. Step-by-step guide for health researchers to influence climate policy." />
+	<meta property="og:image" content="https://salurbal-climate.github.io/cop_2025_scrolly/img/cop30/hero_image.jpg" />
 	<meta property="og:site_name" content="SALURBAL Climate" />
 	<meta property="og:locale" content="en_US" />
 	
 	<!-- Twitter -->
-	<meta property="twitter:card" content="summary_large_image" />
-	<meta property="twitter:title" content="Bringing Urban Health to the Table at COP30: A Guide for Public Health Researchers and Practitioners" />
-	<meta property="twitter:description" content="A comprehensive guide for public health researchers and practitioners preparing for COP30 in Brazil, November 2025. Learn how COPs work, the role of health research in climate action, and how to engage in the UNFCCC process." />
-	<meta property="twitter:image" content="https://salurbal-climate.github.io/cop_2025_scrolly/img/cop30/EN_Logo_SALURBAL-Climate_png.png" />
-	<meta property="twitter:site" content="@lacurbanhealth" />
-	<meta property="twitter:creator" content="@lacurbanhealth" />
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:title" content="COP30 Health Guide: How Public Health Researchers Can Engage" />
+	<meta name="twitter:description" content="Comprehensive guide for health researchers preparing for COP30 in Brazil. Learn UNFCCC processes and advocacy strategies." />
+	<meta name="twitter:image" content="https://salurbal-climate.github.io/cop_2025_scrolly/img/cop30/hero_image.jpg" />
+	<meta name="twitter:site" content="@lacurbanhealth" />
+	<meta name="twitter:creator" content="@lacurbanhealth" />
 	
 	<!-- Additional Meta Tags -->
 	<meta name="theme-color" content="#2563eb" />
@@ -47,26 +60,27 @@
 	<script type="application/ld+json">
 	{
 		"@context": "https://schema.org",
-		"@type": "Guide",
-		"name": "Bringing Urban Health to the Table at COP30: A Guide for Public Health Researchers and Practitioners",
-		"description": "A comprehensive guide for public health researchers and practitioners preparing for COP30 in Belém, Brazil, November 2025.",
-		"url": "https://data.lacurbanhealth.org/",
-		"image": "https://salurbal-climate.github.io/cop_2025_scrolly/img/cop30/EN_Logo_SALURBAL-Climate_png.png",
+		"@type": "Article",
+		"headline": "Health at COP30: Guide for Public Health Researchers",
+		"name": "Bringing Health to the Table at COP30",
+		"description": "Comprehensive guide for public health researchers engaging with COP30 climate conference in Belém, Brazil, November 2025.",
+		"url": "https://salurbal-climate.github.io/cop_2025_scrolly/",
+		"image": "https://salurbal-climate.github.io/cop_2025_scrolly/img/cop30/hero_image.jpg",
 		"author": {
 			"@type": "Organization",
-			"name": "Climate Change and Urban Health Research Center",
-			"url": "https://drexel.edu/uhc/"
+			"name": "SALURBAL Climate",
+			"url": "https://data.lacurbanhealth.org/"
 		},
 		"publisher": {
 			"@type": "Organization",
 			"name": "SALURBAL Climate",
 			"logo": {
 				"@type": "ImageObject",
-				"url": "https://data.lacurbanhealth.org/"
+				"url": "https://salurbal-climate.github.io/cop_2025_scrolly/img/cop30/EN_Logo_SALURBAL-Climate_png.png"
 			}
 		},
-		"datePublished": "2025-07",
-		"dateModified": "2025-07",
+		"datePublished": "2025-07-01",
+		"dateModified": "2025-07-24",
 		"about": [
 			{
 				"@type": "Event",
@@ -75,15 +89,17 @@
 				"endDate": "2025-11-21",
 				"location": {
 					"@type": "Place",
-					"name": "Belém",
-					"addressCountry": "Brazil"
+					"name": "Belém, Brazil"
 				}
 			}
 		],
-		"keywords": "COP30, climate change, urban health, public health, Brazil 2025, UNFCCC, health pavilion, climate policy, SALURBAL, SALURBAL-Climate, Latin America, urban environment, health equity, climate adaptation, environmental health, health systems, sustainable cities, health co-benefits, NDCs, health research, epidemiology, social determinants of health, air quality, heat islands, green spaces, active transport, cardiovascular health, respiratory health, mental health, infectious disease, health policy, climate resilience, urban planning, built environment, Belém Brazil, Paris Agreement, Kyoto Protocol, WHO, Global Climate and Health Alliance, municipal governments, green zone, blue zone, nationally determined contributions",
-		"genre": ["Education", "Public Health", "Climate Policy"]
+		"inLanguage": ["en", "es", "pt"],
+		"isAccessibleForFree": true,
+		"sameAs": "https://doi.org/10.5281/zenodo.16373280"
 	}
-	</script><!-- Google tag (gtag.js) -->
+	</script>
+	
+	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-08KYJ7YPJN"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
@@ -92,6 +108,28 @@
 
 		gtag('config', 'G-08KYJ7YPJN');
 	</script>
+	
+	<!-- PWA and Mobile Optimization -->
+	<link rel="manifest" href="./manifest.json" />
+	<meta name="mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="default" />
+	<meta name="apple-mobile-web-app-title" content="COP30 Health Guide" />
+	
+	<!-- Apple Touch Icons for iOS -->
+	<link rel="apple-touch-icon" href="./img/cop30/EN_Logo_SALURBAL-Climate_png.png" />
+	<link rel="apple-touch-icon" sizes="152x152" href="./img/cop30/EN_Logo_SALURBAL-Climate_png.png" />
+	<link rel="apple-touch-icon" sizes="180x180" href="./img/cop30/EN_Logo_SALURBAL-Climate_png.png" />
+	
+	<!-- Microsoft Tiles -->
+	<meta name="msapplication-TileImage" content="./img/cop30/EN_Logo_SALURBAL-Climate_png.png" />
+	<meta name="msapplication-TileColor" content="#2f7ed3" />
+	
+	<!-- Performance optimization -->
+	<link rel="preload" as="image" href="./img/cop30/hero_image.jpg" />
+	<link rel="preconnect" href="https://fonts.googleapis.com" />
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+	
 	<link rel='icon' type='image/x-icon' href='./favicon.ico' />
 	<link rel='stylesheet' href='./global.css' />
 	<link rel='stylesheet' href='./build/bundle.css' />
